// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip bottom center 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  color: #001833;
  background-color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  left: 50%;
  margin-left: 7px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="text"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip bottom left 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  color: #001833;
  background-color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  left: 16px;
  margin-left: 15px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="text"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip bottom right 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  color: #001833;
  background-color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
  right: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  right: 16px;
  margin-right: -10px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="text"
  >
    right tooltip
  </div>
</div>
`;

exports[`Tooltip bottom right including width 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  width: 100px;
  color: #001833;
  background-color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
  right: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  right: 16px;
  margin-right: -10px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

@media screen and (min-width:32em) {
  .c1 {
    width: 200px;
  }
}

@media screen and (min-width:40em) {
  .c1 {
    width: 300px;
  }
}

@media screen and (min-width:48em) {
  .c1 {
    width: 400px;
  }
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="text"
    width={
      Array [
        "100px",
        "200px",
        "300px",
        "400px",
      ]
    }
  >
    right tooltip
  </div>
</div>
`;

exports[`Tooltip renders 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  color: #001833;
  background-color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #fff;
  text-align: center;
  top: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #fff #fff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-225deg);
  -ms-transform: rotate(-225deg);
  transform: rotate(-225deg);
  top: 0;
  right: 16px;
  margin-right: -10px;
  box-shadow: -1.41px 1.41px 1px 0 rgba(0,0,0,0.01),-3.66px 3.66px 8px 0 rgba(0,0,0,0.04);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="text"
  >
    A Tooltip
  </div>
</div>
`;

exports[`Tooltip top center 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  background-color: #000;
  color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #000;
  text-align: center;
  bottom: -8px;
  left: 50%;
  -webkit-transform: translateX(-50%);
  -ms-transform: translateX(-50%);
  transform: translateX(-50%);
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #000 #000;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  left: 50%;
  margin-left: -7px;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="white"
  >
    centered tooltip
  </div>
</div>
`;

exports[`Tooltip top left 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  background-color: #007aff;
  color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #007aff;
  text-align: center;
  bottom: -8px;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #007aff #007aff;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  left: 16px;
  margin-left: 0;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="white"
  >
    left tooltip
  </div>
</div>
`;

exports[`Tooltip top right 1`] = `
.c1 {
  margin-bottom: 16px;
  margin-top: 8px;
  padding: 8px;
  background-color: #c00;
  color: #fff;
  text-align: right;
}

.c0 {
  display: inline;
  box-shadow: 0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16);
  font-size: 12px;
  position: absolute;
  border-radius: 2px;
  box-sizing: border-box;
  background: #c00;
  text-align: center;
  bottom: -8px;
  right: 0;
}

.c0::after {
  content: '';
  position: absolute;
  width: 0;
  height: 0;
  border-width: 5px;
  border-style: solid;
  border-color: transparent transparent #c00 #c00;
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  -webkit-transform-origin: 0 0;
  -ms-transform-origin: 0 0;
  transform-origin: 0 0;
  -webkit-transform: rotate(-45deg);
  -ms-transform: rotate(-45deg);
  transform: rotate(-45deg);
  bottom: -10px;
  right: 16px;
  margin-right: 5px;
  box-shadow: -9.66px 9.66px 8px 0 rgba(0,0,0,0.04),-4px 4px 4px 0 rgba(0,0,0,0.08);
}

<div
  style={
    Object {
      "position": "relative",
    }
  }
>
  <div
    className="c0 c1"
    color="white"
  >
    right tooltip
  </div>
</div>
`;
